# strategy-tester

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-push.yml  .pylintrc  Makefile  PULL_REQUEST.md  README-SAM.md  README.md  README_TIMESCALEDB.md  conftest.py  handler.py  lambda_handler.py  local_test.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements.txt  run.py  samconfig.toml  serverless.yml  template.yaml  test_trace.py  trace.py
.githooks/: pre-push
cli/: app.py  cli.py  ingest_options.py  ingest_snapshots.py  lambda_handler.py  run.py  targets.py
copper_strategy/: README.md  main.py  run_optimization.py  volume_profile_demo.py
db/: client.py  schema.prisma  services.py  test_connection.py
docker/: option-ingestor.Dockerfile  snapshot-ingestor.Dockerfile
incident-reviews/: 2025-10-26-postgresql-query-planner-error.md  README.md  TECHNICAL_KNOWLEDGE.md
ingestor/: __init__.py  decorator.py  errors.py  option_ingestor.py  retriever.py  snapshots_ingestor.py  util.py
lib/: __init__.py
lib/log/: __init__.py  (+1 more)
microservices/: __init__.py  config.py
notes/: EVENT_LOOP_CLOSED_FIX.md  TIMERS_SETUP.md  ZSH_SCRIPTS_SETUP.md
option-observability/: all-contracts.py  contract-detail.py  main.py  option-chain-snapshot.py  util.py
options/: __init__.py  config.py  decorator.py  ingestor.py  main.py  operations.py  option-chain-snapshot.py  option_chain_snapshot.py  retriever.py  schema.prisma  script.py  test_util.py  util.py
prisma/: schema.prisma  script.py
scripts/: build_binary.sh  convert_to_timescaledb.sql  ingest_options.service  ingest_options.timer  ingest_options.zsh  ingest_snapshots.service  ingest_snapshots.timer  ingest_snapshots.zsh  load_env.zsh  prepare-sam-env.py  prepare_for_timescaledb.sql  prepare_for_timescaledb_v2.sql  run.zsh  seed_db.py  test_network.service  test_network.zsh  test_timescaledb.py  timescaledb_benefits.py  update_options.service  update_options.zsh
trade/: __init__.py  api.py
(+99 files in other folders)
